add new projects

--- a/projects.html
+++ b/projects.html
@@ -120,13 +120,20 @@
             <p>Dinosaur Game (Automation)</p>
           </a>
         </div>
-        <!-- <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://flask-color-extract.herokuapp.com/"  target="_blank">
+        <div class="col-12 col-md-6 col-lg-4">
+          <a class="url-text" href="https://github.com/viralRupani/space-invaders"  target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/JAmbx6dndmcSY/giphy.gif"
               class="card-img-top" alt="opps!" />
             <p>Space Invaders</p>
           </a>
-        </div> -->
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <a class="url-text" href="https://pocket-dictionary.onrender.com/"  target="_blank">
+            <img class="project-img" src="https://media.giphy.com/media/xT5LMAs2NqesxdXwvC/giphy.gif"
+              class="card-img-top" alt="opps!" />
+            <p>Pocket Dictionary</p>
+          </a>
+        </div>
         
       </div>
       <button class="btn btn-outline-dark">
