--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <!-- <h5>Pursuing B.tech 2nd Year from Gujarat, India.</h5>
           <h5>Presently working on my DSA skills.</h5> -->
           <div class="hire-resume-button">
-            <button class="btn btn-outline-dark" onclick="window.open('static/images/Viral_Rupani_Resume.pdf')">📄Resume</button>
+            <button class="btn btn-outline-dark" style="color: rgb(224, 221, 221)" onclick="window.open('static/images/Viral_Rupani_Resume.pdf')">📄Resume</button>
             <a href="mailto:viralrupani12017@gmail.com"><button class="btn btn-dark mx-2">🧑‍💻Hire me</button></a>
           </div>
         </div>
