--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
   </section>
 
   <section id="footer" class="text-center">
-    <a class="url-text mx-1" href="https://www.instagram.com/viral_n_rupani/" target="_blank"><i class="fa fa-instagram"
-        aria-hidden="true"></i></a>
-    <a class="url-text mx-1" href="https://www.facebook.com/viral.rupani.161" target="_blank"><i
-        class="fa fa-facebook-square" aria-hidden="true"></i></a>
+    <a class="url-text mx-1" href="https://twitter.com/VEER41280794" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+    <a class="url-text mx-1" href="https://www.linkedin.com/in/viral-rupani-9016a6215/" target="_blank"><i
+        class="fa fa-linkedin" aria-hidden="true"></i></a>
     <a class="url-text mx-1" href="https://github.com/viralRupani" target="_blank"><i
         class="fa-brands fa-github"></i></a>
-    <a class="url-text mx-1" href="https://discord.gg/fuEgkt93" target="_blank"><i class="fa-brands fa-discord"></i></a>
+    <a class="url-text mx-1" href="https://www.instagram.com/viral_n_rupani/" target="_blank"><i class="fa fa-instagram"
+        aria-hidden="true"></i></a>
     <p>Made by <a>Viral Rupani</a> ©️ 2022</p>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
