--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="static/images/anime-boy-whatsapp-dp.jpg" />
 
-  <!-- CSS only -->
+  <!--Bootstrap CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
@@ -30,6 +30,11 @@
 </head>
 
 <body>
+  <!-- Trailer  -->
+  <div id="trailer">
+  </div>
+
+  <!-- Title  -->
   <section id="title">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -65,19 +70,18 @@
         </div>
         <div class="col-12 col-md-6 title-text">
           <h1>Hello,<h1>
-          <h3>I am <span class="typed"> </span></h3>
-          <!-- <h5>Pursuing B.tech 2nd Year from Gujarat, India.</h5>
-          <h5>Presently working on my DSA skills.</h5> -->
-          <div class="hire-resume-button">
-            <button class="btn btn-outline-dark" style="color: rgb(224, 221, 221)" onclick="window.open('static/images/Viral_Rupani_Resume.pdf')">📄Resume</button>
-            <a href="mailto:viralrupani12017@gmail.com"><button class="btn btn-dark mx-2">🧑‍💻Hire me</button></a>
-          </div>
+              <h3>I am <span class="typed"> </span></h3>
+              <div class="hire-resume-button">
+                <button class="btn btn-outline-dark" style="color: rgb(224, 221, 221)"
+                  onclick="window.open('static/images/Viral_Rupani_Resume.pdf')">📄Resume</button>
+                <a href="mailto:viralrupani12017@gmail.com"><button class="btn btn-dark mx-2">🧑‍💻Hire me</button></a>
+              </div>
         </div>
       </div>
     </div>
   </section>
 
-
+  <!-- Expertise -->
   <section id="expertise">
     <div class="container text-center">
       <h1 class="text-center mb-5">Expertise</h1>
@@ -122,6 +126,7 @@
     </div>
   </section>
 
+  <!-- Projects -->
   <section id="projects">
     <div class="container text-center">
       <h1 class="text-center mb-5">Projects</h1>
@@ -175,8 +180,10 @@
     </div>
   </section>
 
+  <!-- Footer  -->
   <section id="footer" class="text-center">
-    <a class="url-text mx-1" href="https://twitter.com/VEER41280794" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+    <a class="url-text mx-1" href="https://twitter.com/VEER41280794" target="_blank"><i
+        class="fa-brands fa-twitter"></i></a>
     <a class="url-text mx-1" href="https://www.linkedin.com/in/viral-rupani-9016a6215/" target="_blank"><i
         class="fa fa-linkedin" aria-hidden="true"></i></a>
     <a class="url-text mx-1" href="https://github.com/viralRupani" target="_blank"><i
@@ -185,14 +192,19 @@
         aria-hidden="true"></i></a>
     <p>Made by <a>Viral Rupani</a> ©️ 2022</p>
   </section>
+
+  <!-- Typed Animation -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
-  var typed = new Typed('.typed', {
-    strings: ["", "Viral Rupani.", "Web Developer.", "Student.", "Tech Enthusiast.", "Learner."],
-    typeSpeed: 100,
-    backSpeed: 80,
-    loop: true
-  });
+    var typed = new Typed('.typed', {
+      strings: ["", "Viral Rupani.", "Web Developer.", "Student.", "Tech Enthusiast.", "Learner."],
+      typeSpeed: 100,
+      backSpeed: 80,
+      loop: true
+    });
   </script>
+
+  <script src="index.js"></script>
 </body>
+
 </html>
