--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="static/images/anime-boy-whatsapp-dp.jpg" />
 
-  <!-- CSS only -->
+  <!--Bootstrap CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
@@ -30,8 +30,11 @@
 </head>
 
 <body>
-  <!-- <h1 class="text-center">Projects !</h1> -->
+  <!-- Trailer -->
+  <div id="trailer">
+  </div>
 
+  <!-- Projects  -->
   <section id="projects">
     <div class="container text-center">
       <h1 class="text-center mb-5">Projects</h1>
@@ -44,7 +47,7 @@
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://veer-blogs.herokuapp.com/"  target="_blank">
+          <a class="url-text" href="https://veer-blogs.herokuapp.com/" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/UtnxCnjWAOL1J6TNUR/giphy.gif"
               class="card-img-top" alt="opps!" />
             <p>Veer Blogs</p>
@@ -52,62 +55,62 @@
         </div>
 
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://github.com/viralRupani/Morse-Code"  target="_blank">
+          <a class="url-text" href="https://github.com/viralRupani/Morse-Code" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/3o6ZsVLQTBtpTQ7bZC/giphy.gif"
               class="card-img-top" alt="opps!" />
             <p>Morse Code</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://github.com/viralRupani/Watermarker"  target="_blank">
+          <a class="url-text" href="https://github.com/viralRupani/Watermarker" target="_blank">
             <img class="project-img" src="static/images/Screenshot (83).png" class="card-img-top" alt="opps!" />
             <p>Watermarker</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://github.com/viralRupani/Type-Test"  target="_blank">
+          <a class="url-text" href="https://github.com/viralRupani/Type-Test" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/fQZX2aoRC1Tqw/giphy.gif" class="card-img-top"
               alt="opps!" />
             <p>Type Speed Test</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://cafe-wifi-restful-api-practice.herokuapp.com/"  target="_blank">
+          <a class="url-text" href="https://cafe-wifi-restful-api-practice.herokuapp.com/" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/gOQ6EgtAiwXde/giphy.gif" class="card-img-top"
               alt="opps!" />
             <p>Cafe and Wifi(RESTful api)</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://github.com/viralRupani/Tic-Tac-Toe"  target="_blank">
+          <a class="url-text" href="https://github.com/viralRupani/Tic-Tac-Toe" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/qAWWpdxRzQCFEVGbiJ/giphy.gif"
               class="card-img-top" alt="opps!" />
             <p>Tic Tac Toe</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://github.com/viralRupani/Breakout-Game"  target="_blank">
+          <a class="url-text" href="https://github.com/viralRupani/Breakout-Game" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/26u4iGYsaVfWljK6s/giphy.gif"
               class="card-img-top" alt="opps!" />
             <p>Breakout Game</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://flask-todolists.herokuapp.com/"  target="_blank">
+          <a class="url-text" href="https://flask-todolists.herokuapp.com/" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/B7o99rIuystY4/giphy.gif" class="card-img-top"
               alt="opps!" />
             <p>TodoLIst</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://github.com/viralRupani/Disappearing-Text-Writing-App"  target="_blank">
+          <a class="url-text" href="https://github.com/viralRupani/Disappearing-Text-Writing-App" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/XGOnPgiiqcwb1JEQJN/giphy.gif"
               class="card-img-top" alt="opps!" />
             <p>Disappearing Text Writing</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://flask-color-extract.herokuapp.com/"  target="_blank">
+          <a class="url-text" href="https://flask-color-extract.herokuapp.com/" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/XEgmzMLDhFQAga8umN/giphy.gif"
               class="card-img-top" alt="opps!" />
             <p>Color Extractor</p>
@@ -115,34 +118,35 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4">
           <a class="url-text" href="https://github.com/viralRupani/Dinosaur-automation" target="_blank">
-            <img class="project-img" src="https://media.giphy.com/media/iVqXV4vE4DDYk/giphy.gif"
-              class="card-img-top" alt="opps!" />
+            <img class="project-img" src="https://media.giphy.com/media/iVqXV4vE4DDYk/giphy.gif" class="card-img-top"
+              alt="opps!" />
             <p>Dinosaur Game (Automation)</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://github.com/viralRupani/space-invaders"  target="_blank">
-            <img class="project-img" src="https://media.giphy.com/media/JAmbx6dndmcSY/giphy.gif"
-              class="card-img-top" alt="opps!" />
+          <a class="url-text" href="https://github.com/viralRupani/space-invaders" target="_blank">
+            <img class="project-img" src="https://media.giphy.com/media/JAmbx6dndmcSY/giphy.gif" class="card-img-top"
+              alt="opps!" />
             <p>Space Invaders</p>
           </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-          <a class="url-text" href="https://pocket-dictionary.onrender.com/"  target="_blank">
+          <a class="url-text" href="https://pocket-dictionary.onrender.com/" target="_blank">
             <img class="project-img" src="https://media.giphy.com/media/xT5LMAs2NqesxdXwvC/giphy.gif"
               class="card-img-top" alt="opps!" />
             <p>Pocket Dictionary</p>
           </a>
         </div>
-        
       </div>
+
       <button class="btn btn-outline-dark">
         <a class="url-text" href="index.html">Profile</a>
       </button>
+
     </div>
   </section>
-  <!-- <h1 class="text-center" style="margin-top: 25%;">🛠️</h1> -->
 
+  <script src="index.js"></script>
 </body>
 
 </html>
