feat: add loader

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,11 @@
 </head>
 
 <body>
+  <!-- Loader -->
+  <div id="loading">
+    <img id="loading-img" src="static/gif/Gear-0.7s-100px.gif" alt="page is loading" />
+  </div>
+
   <!-- Trailer -->
   <div id="trailer">
   </div>
