--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Viral Rupani</title>
+  <meta charset="utf-8" />
+  <meta name="application-name" content="portfolio" />
+  <meta name="author" content="viral rupani" />
+  <meta name="description" content="Hello I am viral rupani from gujarat and this is my portfolio." />
+  <meta name="keywords" content="viral rupani, portfolio, html, css, javascript, python, flask, django, web developer, programming, coding"
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="static/images/anime-boy-whatsapp-dp.jpg" />
 
