--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row heading">
         <div class="col-12 col-md-6 center-image">
-          <img class="developer-image" src="https://media.giphy.com/media/zhYSVCirREeIZtONCI/giphy.gif" />
+          <img class="developer-image" src="https://media.giphy.com/media/zhYSVCirREeIZtONCI/giphy.gif" title="Viral Rupani"/>
         </div>
         <div class="col-12 col-md-6 title-text">
           <h1>Hello,<h1>
@@ -97,40 +97,40 @@
       <h1 class="text-center mb-5">Expertise</h1>
       <div class="row my-5">
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/html.png" title="html icons">
+          <img class="skill-img" src="static/images/css-3.png" title="CSS">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/css-3.png" title="html icons">
+          <img class="skill-img" src="static/images/reactjs.png" title="ReacJS">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/js.png" title="html icons">
+          <img class="skill-img" src="static/images/mui.png" title="Material UI">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/bootstrap.png" title="html icons">
+          <img class="skill-img" src="static/images/js.png" title="JavaScript">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/python.png" title="html icons">
+          <img class="skill-img" src="static/images/typescript.png" title="TypeScript">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/c.png" title="html icons">
+          <img class="skill-img" src="static/images/c++.png" title="C++">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/c++.png" title="html icons">
+          <img class="skill-img" src="static/images/python.png" title="Python">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/php.png" title="html icons">
+          <img class="skill-img" src="static/images/nodejs.png" title="NodeJS">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/java.png" title="html icons">
+          <img class="skill-img" src="static/images/express.png" title="ExpressJS">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/django.png" title="html icons">
+          <img class="skill-img" src="static/images/188-1882559_python-flask-hd-png-download.png" title="Flask">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/188-1882559_python-flask-hd-png-download.png" title="html icons">
+          <img class="skill-img" src="static/images/database.png" title="SQL & NoSQL Databases">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/sql.png" title="html icons">
+          <img class="skill-img" src="static/images/linux.png" title="Debian Linux">
         </div>
       </div>
     </div>
