--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <h3>I am <span class="typed"> </span></h3>
               <div class="hire-resume-button">
                 <button class="btn btn-outline-dark" style="color: rgb(224, 221, 221)"
-                  onclick="window.open('static/images/Viral_Rupani_Resume.pdf')">📄Resume</button>
+                  onclick="window.open('static/images/resume.pdf')">📄Resume</button>
                 <a href="mailto:viralrupani12017@gmail.com"><button class="btn btn-dark mx-2">🧑‍💻Hire me</button></a>
               </div>
         </div>
