[feat]: update navbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="application-name" content="portfolio" />
   <meta name="author" content="viral rupani" />
   <meta name="description" content="Hello I am viral rupani from gujarat and this is my portfolio." />
-  <meta name="keywords" content="viral rupani, portfolio, html, css, javascript, python, flask, django, web developer, programming, coding" />
+  <meta name="keywords"
+    content="viral rupani, portfolio, html, css, javascript, python, flask, django, web developer, programming, coding" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="static/images/anime-boy-whatsapp-dp.jpg" />
 
@@ -47,36 +48,23 @@
   <!-- Title  -->
   <section id="title">
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container-fluid">
-        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#title">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#expertise">Expertise</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="mailto:viralrupani12017@gmail.com">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <header class="__navbar">
+      <nav class="__navbar">
+        <ul class="__navbar">
+          <li class="__navbar"><a href="#title">Profile</a></li>
+          <li class="__navbar"><a href="#expertise">Expertise</a></li>
+          <li class="__navbar"><a href="#projects">Projects</a></li>
+          <li class="__navbar"><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <!-- Heading -->
     <div class="container">
       <div class="row heading">
         <div class="col-12 col-md-6 center-image">
-          <img class="developer-image" src="https://media.giphy.com/media/zhYSVCirREeIZtONCI/giphy.gif" title="Viral Rupani"/>
+          <img class="developer-image" src="https://media.giphy.com/media/zhYSVCirREeIZtONCI/giphy.gif"
+            title="Viral Rupani" />
         </div>
         <div class="col-12 col-md-6 title-text">
           <h1>Hello,<h1>
