[fix]: remove loader

--- a/projects.html
+++ b/projects.html
@@ -31,9 +31,9 @@
 
 <body>
   <!-- Loader -->
-  <div id="loading">
+  <!-- <div id="loading">
     <img id="loading-img" src="static/gif/Gear-0.7s-100px.gif" alt="page is loading" />
-  </div>
+  </div> -->
 
   <!-- Trailer -->
   <div id="trailer">
