--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="__navbar"><a href="#title">Profile</a></li>
           <li class="__navbar"><a href="#expertise">Expertise</a></li>
           <li class="__navbar"><a href="#projects">Projects</a></li>
-          <li class="__navbar"><a href="#contact">Contact</a></li>
+          <li class="__navbar"><a href="mailto:viralrupani12017@gmail.com">Connect </a></li>
         </ul>
       </nav>
     </header>
@@ -72,7 +72,7 @@
               <div class="hire-resume-button">
                 <button class="btn btn-outline-dark" style="color: rgb(224, 221, 221)"
                   onclick="window.open('static/images/resume.pdf')">📄Resume</button>
-                <a href="mailto:viralrupani12017@gmail.com"><button class="btn btn-dark mx-2">🧑‍💻Hire me</button></a>
+                <a href="mailto:viralrupani12017@gmail.com"><button class="btn btn-dark mx-2">💻Hire me</button></a>
               </div>
         </div>
       </div>
