--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     <div class="container text-center">
       <h1 class="text-center mb-5">Expertise</h1>
       <div class="row my-5">
-        <div class="col-6 col-md-2">
+        <!-- <div class="col-6 col-md-2">
           <img class="skill-img" src="static/images/css-3.png" title="CSS">
-        </div>
+        </div> -->
         <div class="col-6 col-md-2">
           <img class="skill-img" src="static/images/reactjs.png" title="ReacJS">
         </div>
@@ -96,22 +96,25 @@
           <img class="skill-img" src="static/images/js.png" title="JavaScript">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/typescript.png" title="TypeScript">
+          <img class="skill-img" src="static/images/typescript.svg" title="TypeScript">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/c++.png" title="C++">
+          <img class="skill-img" src="static/images/node-js.svg" title="NodeJS">
         </div>
         <div class="col-6 col-md-2">
           <img class="skill-img" src="static/images/python.png" title="Python">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/nodejs.png" title="NodeJS">
+          <img class="skill-img" src="static/images/express-js.svg" title="ExpressJS">
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/express.png" title="ExpressJS">
+          <img class="skill-img" src="static/images/nestjs.svg" title="NestJs" />
         </div>
         <div class="col-6 col-md-2">
-          <img class="skill-img" src="static/images/188-1882559_python-flask-hd-png-download.png" title="Flask">
+          <img class="skill-img" src="static/images/flask.svg" title="Flask">
+        </div>
+        <div class="col-6 col-md-2">
+          <img class="skill-img" src="static/images/graphql.svg" title="GraphQl">
         </div>
         <div class="col-6 col-md-2">
           <img class="skill-img" src="static/images/database.png" title="SQL & NoSQL Databases">
